...
"user_edit_profile" = "Edit Profile";
"user_updates_saved" = "Updates Saved";
"user_updates_saved_info" = "Your profile information has been successfully updated.";
"user_verify_email" = "Verify Email";
"user_verify_phone" = "Verify Phone";
"user_almost_there" = "We are almost there!";
"user_almost_there_info" = "We'll just need to confirm your phone number";
"user_delete_account" = "Delete Your Account";
"user_delete_account_description" = "Your account will be permanently deleted. You will not be able to log back in and request rides with this account.";
"user_gender_woman" = "Woman";
"user_gender_man" = "Man";
"user_gender_trans_woman" = "Transgender Woman";
"user_gender_trans_man" = "Transgender Man";
...
"settings_title" = "Settings";
"settings_terms" = "Terms & Conditions";
"settings_privacy" = "Privacy Policy";
"settings_conduct" = "Code of Conduct";
"settings_accessibility" = "Accessibility";
"settings_logout" = "Log out";
"settings_ready_logout" = "Ready to Log Out?";
"settings_ready_logout_info" = "Are you sure you want to log out?";
"settings_turned_on" = "Turned On";
"settings_turned_off" = "Turned Off";
"settings_child_seat" = "Child Seat";
"settings_wheelchair" = "Wheelchair";
"accessibility_not_available" = "Accessibility not available on your location. We hope to bring Circuit accessibility options to you very soon.";
...
"ride_unable_to_locate" = "Unable to Locate";
"ride_unable_to_locate_pickup_info" = "We were unable to find a pickup address associated with the information you've entered. Please try a different address.";
"ride_unable_to_locate_dropoff_info" = "We were unable to find a dropoff address associated with the information you've entered. Please try a different address.";
"ride_address_missing" = "Address Missing";
"ride_address_missing_info" = "Please make sure to fill out both pickup and dropoff.";
"ride_too_soon" = "Too Soon!";
"ride_yes_cancel" = "Yes, Cancel";
"ride_cancel_request_info" = "If you cancel and wish to request again, you will lose your spot in the queue.";
"ride_Ill_wait" = "No, I'll wait";
"ride_cancel_reason" = "We're sorry that you had to cancel your ride.\nCan you please let us know the reason?";
"ride_driver_on_the_way" = "Heading your way";
"ride_driver_on_the_way_info" = "You're already connected with a driver, if you cancel now you'll have to wait three minutes before you can request another ride.";
"ride_no_drivers" = "No Drivers Available";
...
"ride_ride_confirmation" = "Ride Confirmation";
"ride_rating_reason" = "We're sorry you were unhappy with your ride.\nCan you please let us know the reason?";
"ride_rating_submitted" = "Rating Submitted!";
"ride_your_driver" = "Your driver";
"ride_select_pickup_stop" = "Select your pick up spot";
"ride_select_dropoff_stop" = "Select your drop off spot";
"ride_select_this_stop" = "Ok";
"ride_go_to_stop_short" = "Your driver will pick you up at the spot you selected.";
"ride_go_to_stop" = "Your driver will pick you up at the spot you selected. Please make sure you are there when your driver arrives.";
"ride_select_another_stop" = "Select another spot";
"ride_pickup_at" = "Pick up at";
"ride_dropoff_at" = "Drop off at";
"ride_driver_pickup" = "Your driver will pick you up here. Need a different pick up spot? Search for another location above or tap Move pin.";
...
"general_remove" = "Remove";
"general_next" = "Next";
"general_save" = "Save";
"general_ok" = "Ok";
"general_are_you_sure" = "Are you sure?";
"general_confirm" = "Confirm";
"general_done" = "Done";
"general_invalid_input" = "Invalid input";


// MESSAGES
"messages_me" = "Me";
"messages_I_understand" = "I Understand";
...
"Cancel Ride" = "Cancel Ride";
"Log In" = "Log In";
"Sign Up" = "Sign Up";
"and" = "and";
"You need to update Circuit app to the latest version in order to request rides" = "You need to update Circuit app to the latest version in order to request rides";
"Invalid Submission" = "Invalid Submission";
"Email address is not valid" = "Email address is not valid";
"Mobile phone number is not valid" = "Mobile phone number is not valid";
"Password must be at least 8 characters" = "Password must be at least 8 characters";
"Password must contain at least 1 uppercase letter" =  "Password must contain at least 1 uppercase letter";
"Password must contain at least 1 special character" = "Password must contain at least 1 special character";
"Password must contain at least 1 number" = "Password must contain at least 1 number";
"This field" = "This field";
"is required" = "is required";
"Date of Birth is required" = "Date of Birth is required";
"Invalid date format" = "Invalid date format";
"You must be at least 16 years of age" = "You must be at least 16 years of age";
"terms of use" = "terms of use";
"privacy policy" = "privacy policy";
"code of conduct" = "code of conduct";
"Your ride summary" = "Your ride summary";
"Tell us about your ride" = "Tell us about your ride";
"Driver Tip" = "Driver Tip";
...
