...

        addChild(pageController)
        containerView?.addSubview(pageController.view)
        pageController.didMove(toParent: self)
        
        registerButton?.setTitle("Sign Up".localize(), for: .normal)
        registerButton?.accessibilityIdentifier = "signUpButton"

        loginButton?.setTitle("Log In".localize(), for: .normal)
        loginButton?.accessibilityIdentifier = "signInButton"

        Notification.addObserver(self, name: UIApplication.didEnterBackgroundNotification, selector: #selector(stopPagingTimer))
        Notification.addObserver(self, name: UIApplication.didBecomeActiveNotification, selector: #selector(startPagingTimer))
    }

    override public func viewDidAppear(_ animated: Bool) {
...
